deploy/kubernetes/mainfests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
  namespace: helloworld
  labels:
    app: helloworld
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      name: helloworld-pod
      namespace: helloworld
      labels:
        app: helloworld
    spec:
      containers:
        - name: helloworld-container
          image: navi/helloworld:latest
          resources:
            limits:
              memory: "250Mi"
            requests:
              memory: "250Mi"
          command: ["/venv/bin/uvicorn"]
          args: [
            "main:app",
            "--host",
            "0.0.0.0"
          ]

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
  namespace: helloworld
spec:
  selector:
    app: helloworld
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helloworld-ingress
  namespace: helloworld
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: helloworld.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: helloworld-service
              servicePort: 80

# External
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: http
